--- a/advocacy.html
+++ b/advocacy.html
@@ -39,7 +39,7 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                     <li class="fh5co-active"><a href="advocacy.html">Advocacy</a></li>
-                    <li><a href="Partnerships.html">Partnerships</a></li>
+                    <li><a href="partnerships.html">Partnerships</a></li>
                     <li><a href="networks.html">Networks</a></li>
                 </ul>
             </nav>
