--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 <body>
                <div class="about-me-inner site-container">
+
                 <article class="portfolio-wrapper">
                   <div class="portfolio__img">
                     <img src="./img/dp.jpg" class="about-me__profile" alt="about me profile picture">
@@ -65,6 +66,21 @@
                     </div>
                   </div>
                 </div>
+
+                <article class="portfolio-wrapper">         
+                  <div class="portfolio__bottom">
+                    <div class="portfolio__name">
+                      <span>T</span>
+                      <h2>irelo</h2>
+                      <h2><span>M</span>olotlegi</h2>
+                    </div>
+                    <p>Tirelo Molotlegi is a short story author, novelist, and award-winning poet.</p>
+                  </div>
+                  <div class="portfolio__img">
+                    <img src="./img/dp.jpg" class="about-me__profile" alt="about me profile picture">
+                  </div>
+                </article>
+
               </div>
               <hr>
            <div class="tm-container">
