--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <article class="portfolio-wrapper left" >
                   <div class="portfolio__img">
-                    <img src="./img/dp.jpg" class="about-me__profile" alt="about me profile picture">
+                    <img src="./img/DP.jpg" class="about-me__profile" alt="about me profile picture">
                   </div>
                   <div class="portfolio__bottom">
                     <div class="portfolio__name">
@@ -77,7 +77,7 @@
                     <p>Tirelo Molotlegi is a short story author, novelist, and award-winning poet.</p>
                   </div>
                   <div class="portfolio__img">
-                    <img src="./img/dp.jpg" class="about-me__profile" alt="about me profile picture">
+                    <img src="./img/DP.jpg" class="about-me__profile" alt="about me profile picture">
                   </div>
                 </article>
 
