--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
                <div class="about-me-inner site-container">
 
-                <article class="portfolio-wrapper">
+                <article class="portfolio-wrapper left" >
                   <div class="portfolio__img">
                     <img src="./img/dp.jpg" class="about-me__profile" alt="about me profile picture">
                   </div>
@@ -44,7 +44,7 @@
                   </div>
                 </article>
 
-                <div class="about-me__text">
+                <div class="about-me__text middle">
                   <div class="about-me-slider">
                     <div class="about-me-single-slide">
                       <h2>About me</h2>
@@ -67,7 +67,7 @@
                   </div>
                 </div>
 
-                <article class="portfolio-wrapper">         
+                <article class="portfolio-wrapper right">         
                   <div class="portfolio__bottom">
                     <div class="portfolio__name">
                       <span>T</span>
